--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link pr-5" href="#">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link pr-5" href="/">Logout</a>
+              </li>
           </ul>
           
         </div>
