--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,14 @@
 </head>
 <body>
  
+  
   <div class="main">
+    <style>
+      body {
+          background-image: url('images/bg2.PNG');
+      }
+  </style>
+  
     <p class="sign" align="center">Signup</p>
     <form action="/register" method="post" class="form1">
       <input class="un " type="text" align="center" placeholder="Username" name="username" required>
