--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -7,7 +7,14 @@
   <title>WebMall/Login</title>
 </head>
 <body>
+
+  
   <div class="main">
+    <style>
+      body {
+          background-image: url('images/bg2.PNG');
+      }
+  </style>
     <p class="sign" align="center">Login</p>
     <form action="/auth" method="post" class="form1">
       <input class="un " type="text" align="center" placeholder="Username" name="username" required>
